sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  val m = getNombreValeurs()
  var swap = false
  do {
    swap = false
    for (i <- 0 to (m-2)) {
    	if (plusPetit(i+1,i)) {
     		echange(i,i+1);
     		swap = true
      }
    }
    m = m - 1
  } while (swap)
}